--- a/style.css
+++ b/style.css
@@ -4,3 +4,26 @@
     box-sizing: border-box;
     background-color: black;
 }
+
+html, body{
+    height: 100vh;
+    width: 100%;
+    background-color: black;
+    font-weight: 400;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+
+#box{
+    padding-top: 75px;
+    text-align: center;
+    align-items: center;
+    /* display: flex; */
+    justify-content: center;
+    height:300px;
+    width: 500px;
+    border-radius: 10px;
+    border: 2px solid white;
+}
